# floating_prompts_app

./: README.md  main.py  pyproject.toml
src/frontend/src/: App.tsx  index.css
src/frontend/src/api/: client.ts  mockData.ts
src/frontend/src/components/: Layout.tsx
src/frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  Input.tsx  Modal.tsx  SchemaBuilder.tsx  index.ts
src/frontend/src/pages/: Home.tsx  Models.tsx  Playground.tsx  Prompts.tsx  TemplateDetail.tsx  Templates.tsx  index.ts
